fixed drive page

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer base{
     body{
-        @apply bg-gradient-to-b from-black to-gray-800 text-white min-h-screen ;
+        @apply bg-gradient-to-b from-black to-gray-800 text-white min-h-screen font-fontMont;
     }
 }
 
