--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,17 @@
         @apply bg-gradient-to-b from-black to-gray-800 text-white min-h-screen font-fontMont;
     }
 }
-
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
+}
 .glowing-underline::after {
     content: '';
     position: absolute;
